Fixed Table Container and Cards margin layout problem

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -243,6 +243,7 @@ main .container {
     margin-top: 6em;
     margin-left: 290px;
     height: calc(100vh - 6em);
+    padding: 0 20px 0 20px;
     overflow-y: scroll;
 }
 
@@ -256,7 +257,7 @@ main .container {
 /* cards */
 .cards {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .cards .card {
@@ -326,7 +327,8 @@ main .container {
     /* border: 1px solid red; */
     overflow-x: auto;
     padding: 5px 20px 10px 20px;
-    margin: 20px;
+    margin-top: 20px;
+    /* margin: 20px; */
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 1px 6px #0000001A;
     border-radius: 10px 10px 0px 0px
@@ -468,6 +470,32 @@ main .container {
     }
 }
 
+@media (max-width: 800px) {
+    .cards {
+        /* justify-content: space-between; */
+        flex-wrap: wrap;
+    }
+
+    .cards .card {
+        min-width: 42%;
+        margin-top: 10px;
+    }
+}
+
+@media (max-width: 524px) {
+    .cards .card {
+        min-width: 40%;
+        /* margin: 10px; */
+    }
+}
+
+@media (max-width: 400px) {
+    .cards .card {
+        min-width: 90%;
+        margin-top: 10px;
+    }
+}
+
 @media (max-width: 300px) {
     .sidebar {
         width: 200px;
@@ -476,32 +504,5 @@ main .container {
     .sidebar .sidebar-close-btn {
         top: 0;
         left: 160px
-    }
-}
-
-
-@media (max-width: 800px) {
-    .cards {
-        /* justify-content: space-between; */
-        flex-wrap: wrap;
-    }
-
-    .cards .card {
-        min-width: 40%;
-        margin: 10px;
-    }
-}
-
-@media (max-width: 524px) {
-    .cards .card {
-        min-width: 35%;
-        margin: 10px;
-    }
-}
-
-@media (max-width: 351px) {
-    .cards .card {
-        min-width: 80%;
-        margin: 10px;
     }
 }
